# fast-trap

./: Cargo.toml  README.md
.github/workflows/: workflow.yml
fast-trap/: Cargo.toml
fast-trap/src/: entire.rs  lib.rs
fast-trap/src/hal/: riscv.rs  riscv_m.rs
fast-trap/src/hal/riscv/: mod.rs  riscv_m.rs  riscv_s.rs
test-app/: Cargo.toml
test-app/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
