[package]
name = "fast-trap"
description = "Provide a framework for bare-metal trap handling, aiming at ensuring performance while reusing code."
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/YdrMaster/fast-trap.git"
documentation = "https://docs.rs/fast-trap"
license = "MulanPSL-2.0 OR MIT"
readme = "../README.md"
keywords = ["embedded", "trap-handler"]
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
riscv-s = []
riscv-m = []

[package.metadata.docs.rs]
targets = ["riscv32imac-unknown-none-elf", "riscv64imac-unknown-none-elf"]
features = ["riscv-s", "riscv-m"]
